# ai-agent-prototypes

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Notebooks/: ai_agents.ipynb  ai_agents_draft.ipynb  embedding_and_retrieval.ipynb  nodes_and_relationships.ipynb
dependency_files/: sample.txt
mcp_agent_servers/: __init__.py  agent.py  main.py  prompt.py
